# trace-sensing-engine

./: .gitignore  COMPONENT_INTEGRATION.md  CONTRACT.md  HOW_TRACE_USES_IT.md  LIBRARY_SETUP.md  LIMITATIONS.md  OFFLINE_INTEGRATION.md  PROJECT_SUMMARY.md  README.md  USAGE.md
rust-core/: Cargo.toml  build_output.txt
rust-core/examples/: basic_usage.rs  battery_monitoring.rs
rust-core/src/: battery_optimized.rs  context_disruption.rs  export.rs  ffi.rs  heading.rs  integration_tests.rs  lib.rs  main.rs  micro_events.rs  orientation.rs  pipeline.rs  segmentation.rs  signal.rs  stance_detection.rs  step_detection.rs  stress_tests.rs  trajectory.rs  transitions.rs  types.rs  vehicle_detection.rs  wire.rs
